classDiagram
namespace ofc_data {
  class OFCData
  class BaseOFCData
}

class OFC
StateEstimator *-- OFCData
OFCController *-- OFCData
OFCController "1" *-- "2" BendModeToForce
BendModeToForce *-- OFCData
OFC *-- OFCData
OFC *-- SensitivityMatrix
OFC *-- StateEstimator
OFC *-- OFCController
OFC ..> Correction
BaseOFCData <|-- OFCData
